# microsservices-benchmark-test

./: README.md  docker-compose.yml
go/: go.mod
langs/go/: compose.yml  main.go
langs/go/docker/: Dockerfile  compose.yml
langs/go/services/db-consumer/: Dockerfile
langs/go/services/gateway/: Dockerfile  go.mod  go.sum  main.go  routes.json
langs/go/services/gateway/server/: routes.go  server.go
langs/rust/: compose.yml
langs/rust/services/db-consumer/: .docker.env  .env  Cargo.toml  Dockerfile
langs/rust/services/db-consumer/.sqlx/: query-e07f1ed72252294ca4c2f383efef5696e4b662d2c022cd1062123ce8b902045d.json  query-e84b1cd4fedd1129133fd3c90728eb187b3ab576212e65a00aab627702efb019.json  query-ed54da72d514728bac9079582c1a0f333ba4e9f0298347539a4138cace5e71dc.json
langs/rust/services/db-consumer/src/: main.rs
langs/rust/services/db-consumer/src/server/: build_router.rs
langs/rust/services/gateway/: Cargo.toml  Dockerfile  routes.json
langs/rust/services/gateway/src/: panic_handler.rs  router.rs  server.rs
rust/: compose.yml
rust/services/db-consumer/: Cargo.toml  Dockerfile
rust/services/db-consumer/src/: main.rs  user.rs
rust/services/db-consumer/src/components/user/: model.rs  router.rs
rust/services/db-consumer/src/server/: mod.rs
rust/services/db-consumer/src/utils/: mod.rs
rust/services/gateway/: Cargo.toml  Dockerfile  routes.json
rust/services/gateway/src/: main.rs  router.rs  server.rs
scripts/: run-sql.sh
tools/requests/user/: add.http  delete.http  edit.http  get_all.http
tools/scripts/: run-sql.sh
tools/sql/: 2-table.sql  3-data.sql
(+5 files in other folders)
