[package]
name = "db-consumer"
version = "0.1.0"
edition = "2021"


[dependencies]
axum  = { git = "https://github.com/tokio-rs/axum" }
dotenv = "0.15.0"
hyper = { version = "0.14.27", features = ["full"] }
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
sqlx = { version = "0.7.1", features = ["postgres", "uuid", "runtime-tokio"] }
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.4.3", features = ["catch-panic"]}
uuid = { version = "1.4.1", features = ["serde"] }
