# Reference: https://github.com/tokio-rs/axum/tree/main/examples/reverse-proxy

[package]
name = "gateway"
version = "0.1.0"
edition = "2021"


[dependencies]
axum  = { git = "https://github.com/tokio-rs/axum" }
hyper = { version = "0.14.27", features = ["full"] }
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.4.3", features = ["catch-panic"]}
